fix java 11 deprecation issue